--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,58 @@
- html {
-      font-size: 62.5%;
-      box-sizing: border-box;
-    }
+html{
+  box-sizing: border-box;
+}
+.calculator {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  height: 600px;
+padding: 0px;
+background-color: rgb(179, 135, 135);
 
-    *,
-    *::before,
-    *::after {
-      margin: 0;
-      padding: 0;
-      box-sizing: inherit;
-    }
-    .calculator {
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 400px;
-      background-color: grey;
-    }
-    #output {
-      width: 100%;
-      height: 120px;
-      border: none;
-      background-color: #252525;
-      color: rgb(255, 211, 211);
-      text-align: right;
-      padding-right: 20px;
-      padding-left: 10px;
-      font-size: 4rem;
-    }
-    button {
-      border: 1px solid black;
-      outline: none;
-      border-radius: 100px;
-      height: 60px;
-      width: 60px;
-      font-size: 1.5rem!important;
-    }
-    .equal-sign {
-      height: 98%;
-      grid-area: 2 / 4 / 6 / 5;
-    }
-    .calculator-keys {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 20px;
-      padding: 20px;
-  }
+
+}
+.calculatorscreen {
+  width: 100%;
+  height: 100px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 3px solid rgb(42, 40, 44);
+
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  text-align: right;
+  padding-right: 30px;
+  padding-left: 10px;
+  font-size: 4rem;
+}
+button {
+  outline: none;
+    /* display: inline-block; / */
+    margin-top: 10px;
+    width: 60px;
+  height: 60px;
+  border-radius: 100px;
+  font-size: 2rem!important;
+  margin-left: 25px;
+  padding-left: 40px;
+
+}
+
+.calculatorkeys {
+  display: grid;
+  /* / grid-template-columns: repeat(4, 1fr); */ 
+  grid-gap: 200px;
+  padding: 20px;
+  padding-left: 25px;
+}
+.btn-clear{
+ height: 20%;
+ width: 85.5%;
+padding-right: 30px;
+
+}
